# gpt-attention-lab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
config/experiments/: compare_attention.yaml  full_comparison.yaml  linear_attention.yaml  shakespeare.yaml  sparse_attention.yaml
scripts/: ablation_study.py  compare_heads.py  generate_text.py  inspect_attention.py  prepare_data.py  train.py
src/attention_lab/: __init__.py  attention_variants.py  config.py  config_loader.py  generate.py  model.py  model_variants.py  train.py
src/attention_lab/data/: __init__.py  cache.py  shakespeare.py  tokenizer.py
src/attention_lab/inspect/: __init__.py  analyze.py  visualize.py
tests/: __init__.py  test_data.py  test_generate.py  test_model.py
